--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>My Portfolio</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
+						<p>A showcase of my projects and my abilities.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,8 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<!-- Tab Generic <li><a href="generic.html">Generic Page</a></li> --> 
+							<!-- Tab Elements <li><a href="elements.html">Elements Reference</a></li> --> 
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
