--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
+							<li><a href="www.linkedin.com/in/zumrad-kabilova-71bb133a" class="icon brands fa-linkedin"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
