--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Zumrad's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +28,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Zumrad's Portfolio</a>
 					</header>
 
 				<!-- Nav -->
@@ -63,7 +63,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#"> distance between two points</a></h2>
+										<h2><a href="https://github.com/kzumrad/DistanceBetweenTwoPoints.git"><font size="5">distance between two points</font></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Finds the distance between location points based on their respective longitude and latitude.</p>
@@ -73,7 +73,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/kzumrad/SimpleCalculator.git">Simple Calculator</a></h2>
+										<h2><a href="https://github.com/kzumrad/SimpleCalculator.git"><font size="5">Simple Calculator</font></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>A simple calculator </p>
@@ -81,19 +81,17 @@
 										<li><a href="https://github.com/kzumrad/SimpleCalculator.git" class="button">Check it out</a></li>
 									</ul>
 								</article>
-							<!--	<article>
+								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#"><font size="5">Tic Tac Toe</font></a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p> A game of Tic Tac Toe for two players. </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Check it out</a></li>
 									</ul>
 								</article>
-								<article>
+							<!-- <article>
 									<header>
 										<span class="date">April 14, 2017</span>
 										<h2><a href="#">Tempus sed<br />
@@ -128,8 +126,8 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-							</section> -->
+								</article>-->
+							</section> 
 
 						<!-- Footer -->
 							<footer>
@@ -151,7 +149,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" name ="contact_form" action="contact-form-handler.php">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
